<resources>
    <string name="app_name">NeWork</string>
    <string name="menu">Menu</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_api_unavailable_message">Google Api Unavailable</string>
    <string name="author_avatar_description">Author avatar</string>
    <string name="menu_description">Menu</string>
    <string name="image_container">Image container</string>
    <string name="video_thumbnail_description">Video thumbnail</string>
    <string name="video_container">Video container</string>
    <string name="like_description">Like</string>
    <string name="share_description">Share</string>
    <string name="participate_description">Participate</string>
    <string name="mentions_description">Mentions</string>
    <string name="speakers_description">Speakers</string>
    <string name="coordinates_description">Coordinates</string>
    <string name="liked_and_mentioned_users_sample_text">Liked and mentioned users amount</string>
    <string name="sample_author_name">Ivanov Ivan</string>
    <string name="sample_published_date">January 1, 20:00</string>
    <string name="sample_content">The quick brown fox jumps over the lazy dog</string>
    <string name="sample_number">15</string>
    <string name="mention">Mention</string>
    <string name="retry_loading">Retry loading</string>
    <string name="empty_posts">There are no posts. If you create a new post, it will appear here.</string>
    <string name="server_error_message">There was an error connecting to the server. \n Please check your internet connection settings \n or try again later.</string>
    <string name="error_loading">Loading error. There is no internet connection</string>
    <string name="add_post">Add post</string>
    <string name="add_job">Add job</string>
    <string name="add_event">Add event</string>
    <string name="add_avatar">Add avatar</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="content">Content</string>
    <string name="exit">Exit</string>
    <string name="mention_users">Mention users</string>
    <string name="add_coordinates">Add coordinates</string>
    <string name="add_link">Add link</string>
    <string name="link_description">Link</string>
    <string name="pick_photo_description">Pick photo</string>
    <string name="take_photo_description">Take photo</string>
    <string name="pick_video_description">Pick video</string>
    <string name="pick_audio_description">Pick audio</string>
    <string name="save_photo_description">Save photo</string>
    <string name="close_user_preview_card_description">Close user preview card</string>
    <string name="get_location">Get location</string>
    <string name="login">Login:</string>
    <string name="enter_login">Enter login</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_user_name">Enter your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_filling_forms">Please fill all forms</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="skip_edit_question">Are you sure you want to exit? All changes will be lost</string>
    <string name="fill_text">Please fill content text and datetime</string>
    <string name="need_location_permission">Location permission required</string>
    <string name="event_type_online">Online</string>
    <string name="event_type_offline">Offline</string>
    <string name="event_type_description">Event type</string>
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="fill_company_name_position_and_start_date_message">Please fill in company name, position and start date</string>
    <string name="add_speakers">Add speakers</string>
    <string name="add_date_time">Add date and time</string>
    <string name="go_to_register_page">Go to register page</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="choose_event_users">Choose event users</string>
    <string name="choose_post_users">Choose post users</string>
    <string name="contacts">Contacts</string>
    <string name="events">Events</string>
    <string name="posts">Posts</string>
    <string name="map">Map</string>
    <string name="create_event">Create event</string>
    <string name="create_post">Create post</string>
    <string name="post_users">Post users</string>
    <string name="event_users">Event users</string>
    <string name="photo">Photo</string>
</resources>